# Minishell

./: CMakeLists.txt  Makefile  minishell
include/: minishell.h
libmini/: Makefile  ft_is_big_alpha.c  ft_is_low_alpha.c  ft_split.c  ft_strcmp.c  libft.h
minilib/: Makefile  ft_strjoin.c  ft_strlen.c  libft.h
src/: check_syntax_input.c  check_syntax_utils.c  clear_mshell.c  command_cd.c  command_cd_utils.c  command_echo.c  command_env.c  command_error.c  command_exit.c  command_export.c  command_export2.c  command_pwd.c  command_unset.c  commands.c  comply_com.c  comply_com2.c  comply_execve.c  env.c  env_list.c  minishell.c  mshell_error.c  mshell_signal.c  mshell_utils.c  parser_dollar.c  parser_quote.c  parser_split.c  parser_token.c
